/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package k8s.io.api.resource.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "k8s.io/api/resource/v1alpha1";

// PoolStatus contains status information for a single resource pool.
message PoolStatus {
  // Driver is the DRA driver name for this pool.
  //
  // +required
  optional string driver = 1;

  // PoolName is the name of the pool.
  //
  // +required
  optional string poolName = 2;

  // NodeName is the node this pool is associated with.
  // Empty for non-node-local pools.
  //
  // +optional
  optional string nodeName = 3;

  // TotalDevices is the total number of devices in the pool across all slices.
  //
  // +required
  optional int32 totalDevices = 4;

  // AllocatedDevices is the number of devices currently allocated to claims.
  //
  // +required
  optional int32 allocatedDevices = 5;

  // AvailableDevices is the number of devices available for allocation.
  // This equals TotalDevices - AllocatedDevices - UnavailableDevices.
  //
  // +required
  optional int32 availableDevices = 6;

  // UnavailableDevices is the number of devices that are not available
  // due to taints or other conditions, but are not allocated.
  //
  // +optional
  optional int32 unavailableDevices = 7;

  // SliceCount is the number of ResourceSlices that make up this pool.
  //
  // +required
  optional int32 sliceCount = 8;

  // Generation is the maximum metadata.generation observed across all
  // ResourceSlices in this pool. Can be used to detect changes.
  //
  // +optional
  optional int64 generation = 9;
}

// ResourcePoolStatusRequest triggers a one-time calculation of resource pool status
// based on the provided filters. The request follows a request/response pattern similar
// to CertificateSigningRequest - create a request, and the controller populates the status.
//
// Once status.observationTime is set, the request is considered complete and will not
// be reprocessed. Users should delete and recreate requests to get updated information.
message ResourcePoolStatusRequest {
  // Standard object metadata
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Spec defines the filters for which pools to include in the status.
  //
  // +required
  optional ResourcePoolStatusRequestSpec spec = 2;

  // Status is populated by the controller with the calculated pool status.
  //
  // +optional
  optional ResourcePoolStatusRequestStatus status = 3;
}

// ResourcePoolStatusRequestList is a collection of ResourcePoolStatusRequests.
message ResourcePoolStatusRequestList {
  // Standard list metadata
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is the list of ResourcePoolStatusRequests.
  repeated ResourcePoolStatusRequest items = 2;
}

// ResourcePoolStatusRequestSpec defines the filters for the pool status request.
message ResourcePoolStatusRequestSpec {
  // Driver specifies the DRA driver name to filter pools.
  // Only pools from ResourceSlices with this driver will be included.
  // This field is required to bound the scope of the request.
  //
  // +required
  optional string driver = 1;

  // PoolName optionally filters to a specific pool name.
  // If not specified, all pools from the specified driver are included.
  //
  // +optional
  optional string poolName = 2;

  // Limit optionally specifies the maximum number of pools to return in the status.
  // If more pools match the filter criteria, the response will be truncated
  // and status.truncated will be set to true.
  //
  // Default: 100
  // Maximum: 1000
  //
  // +optional
  // +kubebuilder:default=100
  // +kubebuilder:validation:Minimum=1
  // +kubebuilder:validation:Maximum=1000
  optional int32 limit = 3;
}

// ResourcePoolStatusRequestStatus contains the calculated pool status information.
message ResourcePoolStatusRequestStatus {
  // ObservationTime is the timestamp when the controller calculated this status.
  // Once set, the request is considered complete and will not be reprocessed.
  // Users should delete and recreate the request to get updated information.
  //
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.Time observationTime = 1;

  // Pools contains the status of each pool matching the request filters.
  // The list is sorted by driver, then pool name.
  //
  // +optional
  // +listType=atomic
  repeated PoolStatus pools = 2;

  // Conditions provide information about the state of the request.
  //
  // Known condition types:
  // - "Complete": True when the request has been processed successfully
  // - "Failed": True when the request could not be processed
  //
  // +optional
  // +listType=map
  // +listMapKey=type
  // +patchStrategy=merge
  // +patchMergeKey=type
  repeated .k8s.io.apimachinery.pkg.apis.meta.v1.Condition conditions = 3;

  // ValidationErrors contains any validation errors encountered while processing
  // the request. If present, the request may have partial or no results.
  //
  // +optional
  // +listType=atomic
  repeated string validationErrors = 4;

  // Truncated indicates whether the response was truncated due to the limit.
  // If true, there are more pools matching the filter criteria than were returned.
  //
  // +optional
  optional bool truncated = 5;

  // TotalMatchingPools is the total number of pools that matched the filter criteria,
  // regardless of truncation. This helps users understand how many pools exist
  // even when the response is truncated.
  //
  // +optional
  optional int32 totalMatchingPools = 6;
}

